# rknn_yolov5_Multithreading

./: CMakeLists.txt  README.md  build-linux_RK3566_RK3568.sh  build-linux_RK3588.sh  compile_commands.json
include/: rknnPool.hpp  rknnPool_rtsp.hpp
src/: main.cc  main_h264_rtsp.cc  main_mpi.cc  main_rtsp.cc  main_video.cc
utils/: camera_source.c  mpi_encoder.c  mpi_encoder.h  mpp_encoder.cpp
